Avoid instantiating some number objects